Defined te right location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
 			crossorigin="anonymous"
 		></script>
-		<script src="jquery.overlayhole.js"></script>
+		<script src="js/jquery.overlayhole.js"></script>
 
 		<title>Document</title>
 	</head>
@@ -28,7 +28,7 @@
 				forse besparing op personeelskosten.
 			</p>
 			<div class="foto">
-				<img src="Opgelost.png" height="275px" ; />
+				<img src="img/Opgelost.png" height="275px" ; />
 			</div>
 
 			<p>
@@ -39,7 +39,7 @@
 				Bekijk ons portfolio voor een impressie.
 			</p>
 			<div class="foto1">
-				<img src="Chats.png" height="275px" ; />
+				<img src="img/Chats.png" height="275px" ; />
 			</div>
 		</div>
 
